--- a/pages/team-member/index.wxss
+++ b/pages/team-member/index.wxss
@@ -138,7 +138,8 @@ page {
   color: #6e6e70;
   font-size: 24rpx;
   background: #eef1f8;
-  padding: 15rpx 25rpx;
-  border-radius: 20rpx;
+  padding: 11rpx 15rpx 8rpx 18rpx;
+  border-radius: 60rpx;
+  line-height: 33rpx;
   margin: 20rpx 20rpx 0 0;
 }
