--- a/pages/team-detail/index.wxml
+++ b/pages/team-detail/index.wxml
@@ -1,4 +1,4 @@
-<view class="team-info">
+<view class="team-info" wx:if="{{profile.id}}">
   <image class="avatar" src="{{profile.avatar}}" />
   <text class="nickname">{{profile.name}}</text>
   <p class="team-hourly-money">
@@ -7,7 +7,7 @@
   <text class="team-slogan">{{profile.slogan}}</text>
 </view>
 
-<view class="team-info-desp">
+<view class="team-info-desp" wx:if="{{profile.id}}">
   <p><image class="team-icon" src="./images/icon_desc.png" />团队简介</p>
   <view class="desp-time">成立于{{profile.create_at}}</view>
   <view class="desp-content">{{profile.overview}}</view>
@@ -15,21 +15,24 @@
 
 <view class="team-card">
   <p class="title"><image class="team-icon" src="./images/icon_fankui.png" /><text class="word">工作历史及反馈</text></p>
-  <view wx:if="{{contracts.length>0}}">
+  <view wx:if="{{contracts.length}}">
     <block wx:for="{{contracts}}" wx:key="id" wx:for-item="item">
       <view class="project-list">
         <text class="name">{{item.name}}</text>
         <p class="score-star">
           <span class="star-bg">
-            <image class="star" src="./images/icon-xing.png" />
+            <span class="star-width" style="width: {{item.allAva}}%"><image class="star" src="./images/icon-xing.png" /></span>
           </span>
         </p>
         <p class="price-info">
           <span class="price">¥ {{item.total_amount}}</span> ({{item.paymethodStr}})
-          <span class="time">
-            合同期间<time>{{item.time}}</time>
-          </span>
         </p>
+        <view class="price-info">
+          <text class="use-time">工作用时 79小时</text>
+          <span class="time">
+            合同周期<time>{{item.time}}</time>
+          </span>
+        </view>
       </view>
     </block>
   </view>
