--- a/pages/project-detail/index.wxml
+++ b/pages/project-detail/index.wxml
@@ -44,7 +44,7 @@
       <label>面试人数：</label>{{job.proposal.interview}}人
     </li>
     <li>
-      <image class="icon" src="http://static.clouderwork.com/m-test/dist/img/time_icon.png"/>
+      <image class="icon" src="images/time@2x.png"/>
       <label>发布时间：</label><time>{{job.publish_at}}</time>
     </li>
   </ul>
