--- a/pages/project/index.wxss
+++ b/pages/project/index.wxss
@@ -29,6 +29,7 @@ page {
   background-color: #D38297;
   float:left;
   margin-top: 39rpx;
+  overflow: hidden;
 }
 .post-title {
   color: #D38297;
