--- a/pages/project-detail/index.wxml
+++ b/pages/project-detail/index.wxml
@@ -78,15 +78,11 @@
         <p class="text"><span wx:for="{{job.api}}" wx:key="*this" wx:for-item="item">{{item}}</span></p>
       </li>
       <li wx:if="{{job.frameworks.length}}">
-        <p class="list-name">集成API：</p>
-        <p class="text"><span wx:for="{{job.frameworks}}" wx:key="*this" wx:for-item="item">{{item}}</span></p>
-      </li>
-      <li wx:if="{{job.frameworks.length}}">
-        <p class="list-name">集成API：</p>
+        <p class="list-name">开发框架：</p>
         <p class="text"><span wx:for="{{job.frameworks}}" wx:key="*this" wx:for-item="item">{{item}}</span></p>
       </li>
       <li wx:if="{{job.languages.length}}">
-        <p class="list-name">集成API：</p>
+        <p class="list-name">服务方需掌握的语言：</p>
         <p class="text"><span wx:for="{{job.languages}}" wx:key="*this" wx:for-item="item">{{item}}</span></p>
       </li>
     </ul>
