--- a/pages/freelancer-detail/index.wxml
+++ b/pages/freelancer-detail/index.wxml
@@ -81,7 +81,7 @@
             <view class="team-content">
               <image class="peole-icon" src="./images/icon-people.png" />
               <text wx:if="{{team.mtype === 'owner'}}">创建人</text>
-              <text wx:elif="{{team.mtype === 'staff'}}">成员</text>
+              <text wx:elif="{{team.mtype === 'staff'}}">普通成员</text>
               <text wx:else>管理员</text>
             </view>
           </view>
