--- a/pages/signin/index.wxss
+++ b/pages/signin/index.wxss
@@ -6,6 +6,12 @@ page {
 .signin-container {
     margin-top: 20rpx;
 }
+.section {
+    border-bottom: 2rpx solid #f4f4f4;
+}
+.section:last-child {
+    border-bottom: none;
+}
 input {
     font-size: 30rpx;
     color: #cfcfcf;
@@ -13,12 +19,6 @@ input {
     padding: 30rpx;
     border-bottom: 2rpx solid #f4f4f4;
     background: #fff;
-}
-input:last-child {
-    border-bottom: none;
-}
-.signin-password {
-    backgound: url() no-repeat right center;
 }
 .btn-signin button {
     font-size: 38rpx;
