--- a/pages/signin/index.wxml
+++ b/pages/signin/index.wxml
@@ -5,7 +5,7 @@
         <input placeholder="请输入手机号/用户名/邮箱" focus="" />
         <input type="password" placeholder="请输入密码" focus="" class="signin-password"/>
         <view class="btn-signin">
-            <button type="default">登录</button>
+            <button type="button">登录</button>
         </view>
     </view>
 </view>
