--- a/pages/profile/index.wxml
+++ b/pages/profile/index.wxml
@@ -1,11 +1,12 @@
 <!--index.wxml-->
+<import src="../../components/tab-bar.wxml"/>
 <view class="profile-container">
   <view class="my-profile">
-    <image class="profile-avatar" src="image/user_avatar.png" />
-    <text class="profile-name">小黑鼠的小白猫</text>
+    <image class="profile-avatar" src="{{profile.avatar}}" />
+    <text class="profile-name">{{profile.nickname}}</text>
   </view>
-  <view class="profile-title"><image class="my-bids" src="image/icon_bid.png" />我的投标</view>
-  <view class="bids-list">
+  <view class="profile-title" wx:if="{{role === 'f'}}"><image class="my-bids" src="image/icon_bid.png" />我的投标</view>
+  <view class="bids-list" wx:if="{{role === 'f'}}">
     <block wx:for="{{[1]}}" wx:for-item="bid">
       <view class="bid-item">
         <text class="bid-title">工程机械WEB、 移动端及APP开发</text>
@@ -17,8 +18,8 @@
       </view>
     </block>
   </view>
-  <view class="profile-title"><image class="my-invite" src="image/icon_invite.png" />我发出的邀请</view>
-  <view class="invite-list">
+  <view class="profile-title" wx:if="{{role === 'c'}}"><image class="my-invite" src="image/icon_invite.png" />我发出的邀请</view>
+  <view class="invite-list" wx:if="{{role === 'c'}}">
     <block wx:for="{{[1]}}" wx:for-item="invite">
       <view class="invite-item">
         <image class="freelancer-avatar" src="image/avatar.png" />
@@ -31,9 +32,10 @@
       </view>
     </block>
   </view>
-  <view class="switch-role">切换服务方身份</view>
-  <view class="no-profile-data">
+  <view class="switch-role" bindtap="changeRole" wx:if="{{(role === 'f' && proposals.length>0) || (role === 'c' && invites.length>0)}}">切换{{roleName}}</view>
+  <view class="no-profile-data" wx:else>
     <image class="no-data-icon" src="image/icon_no_data.png" />
     <text class="no-data-tips">暂时还没有内容哦~</text>
   </view>
+  <template is="tabBar" data="{{from}}" />
 </view>
