--- a/pages/profile/index.wxml
+++ b/pages/profile/index.wxml
@@ -1,41 +1,45 @@
 <!--index.wxml-->
 <import src="../../components/tab-bar.wxml"/>
 <view class="profile-container">
-  <view class="my-profile">
-    <image class="profile-avatar" src="{{profile.avatar}}" />
-    <text class="profile-name">{{profile.nickname}}</text>
-  </view>
-  <view class="profile-title" wx:if="{{role === 'f'}}"><image class="my-bids" src="image/icon_bid.png" />我的投标</view>
-  <view class="bids-list" wx:if="{{role === 'f'}}">
-    <block wx:for="{{[1]}}" wx:for-item="bid">
-      <view class="bid-item">
-        <text class="bid-title">工程机械WEB、 移动端及APP开发</text>
-        <view class="bid-content">本公司为初创型的科技公司.需要设计一个logo，1的有upsc四个字母组成，2、色调：以蓝色为主调…</view>
-        <view class="bid-time">
-          <text class="time">报名日期 2016-12-12</text>
-          <view class="go-next">查看报名内容<image class="next-icon" src="image/icon_next.png" /></view>
-        </view>
+  <view wx:if="{{profileLoad && listLoad}}">
+    <view class="my-profile">
+      <image class="profile-avatar" src="{{profile.avatar}}" />
+      <text class="profile-name">{{profile.nickname}}</text>
+    </view>
+    <view wx:if="{{role === 'f' && proposals.length > 0 || (role === 'c' && invites.length > 0)}}">
+      <view class="profile-title" wx:if="{{role === 'f'}}"><image class="my-bids" src="image/icon_bid.png" />我的投标</view>
+      <view class="bids-list" wx:if="{{role === 'f'}}">
+        <block wx:for="{{[1]}}" wx:for-item="bid">
+          <view class="bid-item">
+            <text class="bid-title">工程机械WEB、 移动端及APP开发</text>
+            <view class="bid-content">本公司为初创型的科技公司.需要设计一个logo，1的有upsc四个字母组成，2、色调：以蓝色为主调…</view>
+            <view class="bid-time">
+              <text class="time">报名日期 2016-12-12</text>
+              <view class="go-next">查看报名内容<image class="next-icon" src="image/icon_next.png" /></view>
+            </view>
+          </view>
+        </block>
       </view>
-    </block>
-  </view>
-  <view class="profile-title" wx:if="{{role === 'c'}}"><image class="my-invite" src="image/icon_invite.png" />我发出的邀请</view>
-  <view class="invite-list" wx:if="{{role === 'c'}}">
-    <block wx:for="{{[1]}}" wx:for-item="invite">
-      <view class="invite-item">
-        <image class="freelancer-avatar" src="image/avatar.png" />
-        <view class="freelancer-info">
-          <text class="name">小黑鼠的小白猫</text>
-          <text class="position">UI/UE设计师</text>
-          <text class="time">邀请日期 2016-12-12</text>
-        </view>
-        <image class="go-invite" src="image/icon_next.png" />
+      <view class="profile-title" wx:if="{{role === 'c'}}"><image class="my-invite" src="image/icon_invite.png" />我发出的邀请</view>
+      <view class="invite-list" wx:if="{{role === 'c'}}">
+        <block wx:for="{{[1]}}" wx:for-item="invite">
+          <view class="invite-item">
+            <image class="freelancer-avatar" src="image/avatar.png" />
+            <view class="freelancer-info">
+              <text class="name">小黑鼠的小白猫</text>
+              <text class="position">UI/UE设计师</text>
+              <text class="time">邀请日期 2016-12-12</text>
+            </view>
+            <image class="go-invite" src="image/icon_next.png" />
+          </view>
+        </block>
       </view>
-    </block>
-  </view>
-  <view class="switch-role" bindtap="changeRole" wx:if="{{(role === 'f' && proposals.length>0) || (role === 'c' && invites.length>0)}}">切换{{roleName}}</view>
-  <view class="no-profile-data" wx:else>
-    <image class="no-data-icon" src="image/icon_no_data.png" />
-    <text class="no-data-tips">暂时还没有内容哦~</text>
+    </view>
+    <view class="no-profile-data" wx:else>
+      <image class="no-data-icon" src="image/icon_no_data.png" />
+      <text class="no-data-tips">暂时还没有内容哦~</text>
+    </view>
+    <view class="switch-role" bindtap="changeRole">切换{{role === 'c'?'服务方':'需求方'}}</view>
   </view>
   <template is="tabBar" data="{{from}}" />
 </view>
