--- a/pages/proposal/index.wxss
+++ b/pages/proposal/index.wxss
@@ -10,19 +10,73 @@ view {
 
 .pro-money {
     margin-top: 20px;
-    font-size: 42rpx;
+    font-size: 30rpx;
 }
 
 .pro-money view {
     height: 100rpx;
     background: #fff;
     padding: 29rpx 19rpx;
-    color: #777;
 }
 .first-box {
     border-bottom: 2px solid #f4f4f4;
+    display: flex;
+}
+
+.money-text {
+    border: none;
+    text-align: right;
+    position: relative;
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
+    box-flex: 1;
+    flex: 1;
+    display: block;
+    width: 100%;
+    outline: none;
+    top: -5rpx;
+}
+
+.first-box-center {
+    color: #cfcfcf;
+}
+
+.second-box {
+    text-align: center;
+    font-size: 30rpx;
+    color: #ff6700;
+}
+
+.service-money {
+    display: block;
+    font-size: 24rpx;
+    color: #9e9e9e;
+    margin-top: 5rpx;
 }
 
 .third-box {
     margin-top: 20rpx;
+}
+
+.third-box-left {
+    float: left;
+}
+
+.third-box-right {
+    float: right;
+    margin-top: -30rpx;
+}
+
+.switch-role {
+  background-color:#fff;
+  line-height:100rpx;
+  text-align:center;
+  font-size:34rpx;
+  color:#ff6700;
+  margin-top:40rpx;
+  border-top: 2rpx solid #e2e2e9;
+  position: fixed;
+  bottom:0;
+  left: 0;
+  right: 0;
 }
