--- a/pages/project-detail/index.wxml
+++ b/pages/project-detail/index.wxml
@@ -89,4 +89,4 @@
   </block>
 </view>
 
-<view class="switch-role" bindtap="proposal">投标</view>
+<view class="switch-role" bindtap="proposal">{{role === 'c'?'我要':'邀请'}}投标</view>
