--- a/pages/proposal-detail/index.wxss
+++ b/pages/proposal-detail/index.wxss
@@ -16,6 +16,32 @@ page {
   border-bottom: 2rpx solid #efeff4;
   display: flex;
 }
+.last-budget {
+  height: 98rpx;
+  border: 0;
+  padding: 0 0 20rpx;
+  background-color: #efeff4;
+}
+.last-budget .money-tips {
+  font-size: 30rpx;
+  color: #ff6700;
+  text-align: center;
+  line-height: 42rpx;
+  padding-top: 9rpx;
+  background-color: #fff;
+}
+.last-budget text {
+  display: block
+}
+.last-budget .service {
+  font-size: 24rpx;
+  color: #9e9e9e;
+  line-height: 33rpx;
+  padding-top: 5rpx;
+  text-align: center;
+  background-color: #fff;
+  padding-bottom: 9rpx;
+}
 .content-list:last-child {
   border: 0;
 }
