--- a/pages/project-detail/index.wxml
+++ b/pages/project-detail/index.wxml
@@ -2,11 +2,21 @@
 <view class="project-details">
   <p class="job-name">{{job.name}}</p>
   <block wx:if="{{job.paymethod=='hour'}}">
-    <p class="job-price">{{job.hourPrice}}<i>(按工时付费)</i></p>
-    <p class="work-time">工作时长:<span>{{job.duration}}，{{job.workload}}</span></p>
+    <view class="job-method">
+      <p class="job-price">按小时付费</p>
+      <p class="job-create">{{job.publish_at}}</p>
+    </view>
+    <view class="work-box">
+      <span class="arrow-icon"></span>
+      <p>工作级别:<span>{{job.level}} {{job.hourPrice}}</span></p>
+      <p>工作周期:<span>{{job.duration}}，{{job.workload}}</span></p>
+    </view>
   </block>
   <block wx:if="{{job.paymethod=='fixed'}}">
-    <p class="job-price">预算{{job.budget}}元<i>(按固定价格付费)</i></p>
+    <view class="job-method">
+      <p class="job-price">￥{{job.budget}}</p>
+      <p class="job-create">{{job.publish_at}}</p>
+    </view>
   </block>
 </view>
 
@@ -30,22 +40,19 @@
       <label>招聘：</label>
       {{job.hires}}人
     </li>
+  </ul>
+</view>
+
+<view class="job-info mr-top">
+  <ul>
     <li>
-      <image class="icon" src="http://static.clouderwork.com/m-test/dist/img/level_icon.png"/>
-      <label>级别：</label>
-      {{job.level}}
-    </li>
-    <li>
-      <image class="icon" src="http://static.clouderwork.com/m-test/dist/img/person_icon.png"/>
       <label>报名人数：</label>{{job.proposal.proposal}}人
     </li>
     <li>
-      <image class="icon" src="http://static.clouderwork.com/m-test/dist/img/person_num_icon.png"/>
-      <label>面试人数：</label>{{job.proposal.interview}}人
+      <label>面试：</label>{{job.proposal.interview}}人
     </li>
     <li>
-      <image class="icon" src="images/time@2x.png"/>
-      <label>发布时间：</label><time>{{job.publish_at}}</time>
+      <label>最近一次查看时间：</label><time>{{job.last_view_time}}</time>
     </li>
   </ul>
 </view>
@@ -61,32 +68,40 @@
   </view>
   <block wx:if="{{panel==='more'}}">
     <ul class="panel-more">
-      <li wx:if="{{job.skills.length}}">
-        <p class="list-name">技能要求：</p>
-        <p class="skills"><span wx:for="{{job.skills}}" wx:key="*this" wx:for-item="skill">{{skill}}</span></p>
+      <li wx:if="{{job.status}}">
+        <p class="list-name">项目状态：</p>
+        <p class="text">{{job.status}}</p>
       </li>
       <li wx:if="{{job.stage}}">
-        <p class="list-name">项目所处阶段：</p>
+        <p class="list-name">一次性项目：</p>
+        <p class="text">{{job.status}}</p>
+      </li>
+      <li wx:if="{{job.stage}}">
+        <p class="list-name">项目阶段：</p>
         <p class="text">{{job.stage}}</p>
+      </li>
+      <li wx:if="{{job.languages.length}}">
+        <p class="list-name">必掌握语言：</p>
+        <p class="text"><span wx:for="{{job.languages}}" wx:key="*this" wx:for-item="item">{{item}}</span></p>
       </li>
       <li wx:if="{{job.platforms.length}}">
         <p class="list-name">应用平台：</p>
         <p class="text"><span wx:for="{{job.platforms}}" wx:key="*this" wx:for-item="item">{{item}}</span></p>
       </li>
-      <li wx:if="{{job.api.length}}">
-        <p class="list-name">集成API：</p>
-        <p class="text"><span wx:for="{{job.api}}" wx:key="*this" wx:for-item="item">{{item}}</span></p>
-      </li>
       <li wx:if="{{job.frameworks.length}}">
-        <p class="list-name">开发框架：</p>
+        <p class="list-name">喜欢的框架：</p>
         <p class="text"><span wx:for="{{job.frameworks}}" wx:key="*this" wx:for-item="item">{{item}}</span></p>
       </li>
-      <li wx:if="{{job.languages.length}}">
-        <p class="list-name">服务方需掌握的语言：</p>
-        <p class="text"><span wx:for="{{job.languages}}" wx:key="*this" wx:for-item="item">{{item}}</span></p>
+      <li wx:if="{{job.api.length}}">
+        <p class="list-name">API要求：</p>
+        <p class="text" ><span wx:for="{{job.api}}" wx:key="*this" wx:for-item="item">{{item}}</span></p>
+      </li>
+      <li wx:if="{{job.skills.length}}" class="skills-box">
+        <p class="list-name">其他技能：</p>
+        <p class="skills"><span wx:for="{{job.skills}}" wx:key="*this" wx:for-item="skill">{{skill}}</span></p>
       </li>
     </ul>
   </block>
 </view>
 
-<view class="switch-role" bindtap="proposal">投标</view>
+<button type="default" class="proposal-btn" bindtap="proposal"> 投标 </button>
