--- a/pages/profile/index.wxml
+++ b/pages/profile/index.wxml
@@ -22,13 +22,15 @@
       </view>
       <view class="profile-title" wx:if="{{role === 'c'}}"><image class="my-invite" src="image/icon_invite.png" />我发出的邀请</view>
       <view class="invite-list" wx:if="{{role === 'c'}}">
-        <block wx:for="{{invites}}" wx:key="{{invite.id}}" wx:for-item="invite">
-          <view class="invite-item">
-            <image class="freelancer-avatar" src="image/avatar.png" />
+        <block wx:for="{{invites}}" wx:key="{{invite.proposal_id}}" wx:for-item="invite">
+          <view class="invite-item" data-id="{{invite.proposal_id}}" bindtap="goInvite">
+            <image wx:if="{{invite.is_team}}" class="freelancer-avatar" src="{{invite.user.team.avatar}}" />
+            <image wx:else class="freelancer-avatar" src="{{invite.user.freelancer.avatar}}" />
             <view class="freelancer-info">
-              <text class="name">小黑鼠的小白猫</text>
-              <text class="position">UI/UE设计师</text>
-              <text class="time">邀请日期 2016-12-12</text>
+              <text wx:if="{{invite.is_team}}" class="name">{{invite.user.team.name}}</text>
+              <text wx:else class="name">{{invite.user.freelancer.name}}</text>
+              <text class="position" wx:if="{{!invite.is_team}}">{{invite.user.freelancer.title}}</text>
+              <text class="time">邀请日期 {{invite.create_at}}</text>
             </view>
             <image class="go-invite" src="image/icon_next.png" />
           </view>
