--- a/pages/invite-detail/index.wxml
+++ b/pages/invite-detail/index.wxml
@@ -5,8 +5,13 @@
       <text>项目</text>
       <text>{{invite.job.name}}</text>
     </view>
+    <view class="content-list" wx:if="{{invite.attachment.id}}">
+      <text>附件</text>
+      <text>有附件，请前往网站查看</text>
+    </view>
     <view class="content-list" wx:if="{{invite.job.paymethod === 'fixed'}}">
       <text>预计完成时间</text>
+      <text wx:if="{{invite.duration == 0}}">未设置</text>
       <text wx:if="{{invite.duration == 1}}">6个月以上</text>
       <text wx:if="{{invite.duration == 2}}">3到6个月</text>
       <text wx:if="{{invite.duration == 3}}">1到3个月</text>
