--- a/pages/profile/index.wxml
+++ b/pages/profile/index.wxml
@@ -36,7 +36,7 @@
       </block>
     </view>
   </view>
-  <view class="no-profile-data" wx:else>
+  <view class="no-profile-data" wx:if="{{role === 'f' && proposals.length === 0 || (role === 'c' && invites.length === 0)}}">
     <image class="no-data-icon" src="image/icon_no_data.png" />
     <text class="no-data-tips">暂时还没有内容哦~</text>
   </view>
